--- a/.gitignore
+++ b/.gitignore
@@ -68,8 +68,7 @@ instance/
 # Scrapy stuff:
 .scrapy
 
-# Sphinx documentation
-docs/_build/
+frontend/_build/
 
 # PyBuilder
 .pybuilder/
@@ -205,3 +204,8 @@ cython_debug/
 marimo/_static/
 marimo/_lsp/
 __marimo__/
+
+node_modules
+_site
+
+frontend/assets/tailwind.css
