--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -26,4 +26,4 @@ sphinx:
 # See https://docs.readthedocs.io/en/stable/guides/reproducible-builds.html
 python:
   install:
-    - requirements: doc/requirements.txt
+    - requirements: doc/requirements-docs.txt
