--- a/.github/workflows/pre-commit.yml
+++ b/.github/workflows/pre-commit.yml
@@ -49,12 +49,12 @@ jobs:
         uses: actions/cache@v4
         with:
           path: ~/.cache/pip
-          key: pip|${{ runner.os }}|${{ env.PY }}|${{ hashFiles('**/requirements*.txt', '.pre-commit-config.yaml') }}
+          key: pip|${{ runner.os }}|${{ env.PY }}|${{ hashFiles('**/requirements-docs*.txt', '.pre-commit-config.yaml') }}
 
       - name: 🪛 Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install -r requirements.txt
+          pip install -r requirements-docs.txt
 
       - name: 🏃🏻‍♂️‍➡️ Run pre-commit
         run: pre-commit run --all-files
