Use snake_case for Python files in ls-lint

--- a/.github/linters/.ls-lint.yml
+++ b/.github/linters/.ls-lint.yml
@@ -1,5 +1,6 @@
 ---
 ls:
   .json: regex:[._]?[a-z]+(-[a-z]+)*
+  .py: snake_case
   .yaml: regex:[._]?[a-z]+(-[a-z]+)*
   .yml: regex:[._]?[a-z]+(-[a-z]+)*
