--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -13,6 +13,16 @@ repos:
       - id: check-hooks-apply
         name: Check hooks apply to the repository
         description: Useful when testing new hooks to see if they apply to the repository
+  - repo: local
+    hooks:
+      - id: check-zip-file-is-not-committed
+        name: Zip files are not allowed in the repository
+        description: Zip files are not allowed in the repository
+        language: fail
+        entry: |
+          Zip files are not allowed in the repository as they are hard to
+          track and have security implications. Please remove the zip file from the repository.
+        files: \.zip$
   - repo: https://github.com/psf/black
     rev: 25.1.0
     hooks:
