--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -35,13 +35,18 @@ repos:
     hooks:
       - id: check-case-conflict
       - id: check-illegal-windows-names
+      - id: check-json
       - id: check-merge-conflict
       - id: check-vcs-permalinks
+      - id: check-yaml
       - id: detect-aws-credentials
         args: [--allow-missing-credentials]
+      - id: detect-private-key
+      - id: end-of-file-fixer
       - id: fix-byte-order-marker
       - id: forbid-submodules
       - id: mixed-line-ending
+      - id: trailing-whitespace
   - repo: https://github.com/Lucas-C/pre-commit-hooks
     rev: v1.5.5
     hooks:
