--- a/.github/workflows/pre-commit.yml
+++ b/.github/workflows/pre-commit.yml
@@ -57,6 +57,6 @@ jobs:
           pip install -r requirements-dev.txt
 
       - name: 🏃🏻‍♂️‍➡️ Run pre-commit
-        run: pre-commit run --all-files
+        run: pre-commit run --color=always --all-files
       - name: 🏃🏻‍♂️‍➡️ Run pre-commit
-        run: pre-commit run --all-files --hook-stage manual
+        run: pre-commit run --color=always --all-files --hook-stage manual
