--- a/.github/workflows/super-linter.yml
+++ b/.github/workflows/super-linter.yml
@@ -17,7 +17,7 @@ jobs:
     permissions:
       contents: read  # for actions/checkout to fetch code
       statuses: write  # for super-linter/super-linter/slim to mark status of each linter run
-    name: Lint Code Base
+    name: 🧹🪣 Lint Code Base
     runs-on: ubuntu-latest
     steps:
       - name: "Checkout ${{ github.ref }} ( ${{ github.sha }} )"
