--- a/.github/workflows/super-linter.yml
+++ b/.github/workflows/super-linter.yml
@@ -15,12 +15,12 @@ permissions:
 jobs:
   build:
     permissions:
-      contents: read  # for actions/checkout to fetch code
-      statuses: write  # for super-linter/super-linter/slim to mark status of each linter run
+      contents: read # for actions/checkout to fetch code
+      statuses: write # for super-linter/super-linter/slim to mark status of each linter run
     name: 🧹🪣 Lint Code Base
     runs-on: ubuntu-latest
     steps:
-      - name: "Checkout ${{ github.ref }} ( ${{ github.sha }} )"
+      - name: 'Checkout ${{ github.ref }} ( ${{ github.sha }} )'
         uses: actions/checkout@v6
         with:
           # Full git history is needed to get a proper list of changed files within `super-linter`
