--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -15,6 +15,14 @@ repos:
         description: Useful when testing new hooks to see if they apply to the repository
   - repo: local
     hooks:
+      - id: prettier
+        name: run prettier
+        description: format files with prettier
+        entry: prettier --write '**/*.yaml' '**/*.yml'
+        args: [--config=.github/linters/.prettierrc]
+        files: \.ya?ml$
+        language: node
+        additional_dependencies: ['prettier@3.7.4']
       - id: check-zip-file-is-not-committed
         name: Zip files are not allowed in the repository
         description: Zip files are not allowed in the repository
