--- a/.github/workflows/first-interaction.yml
+++ b/.github/workflows/first-interaction.yml
@@ -11,6 +11,7 @@ on:
 
 jobs:
   first-interaction:
+    name: 👽 Greetings Earthling
     runs-on: ubuntu-latest
     steps:
       - uses: actions/first-interaction@v3
