--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -18,9 +18,9 @@ repos:
       - id: prettier
         name: run prettier
         description: format files with prettier
-        entry: prettier --write '**/*.json' '**/*.md' '**/*.yaml' '**/*.yml'
+        entry: prettier --write '**/*.html' '**/*.json' '**/*.md' '**/*.yaml' '**/*.yml'
         args: [--config=.github/linters/.prettierrc]
-        files: \.(json|md|ya?ml)$
+        files: \.(html|json|md|ya?ml)$
         language: node
         additional_dependencies: ['prettier@3.7.4']
       - id: check-zip-file-is-not-committed
