--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -42,19 +42,32 @@ repos:
     rev: v6.0.0
     hooks:
       - id: check-case-conflict
+        description: Check for files with names that would conflict on a case-insensitive filesystem like MacOS HFS+ or Windows FAT.
       - id: check-illegal-windows-names
+        description: Check for files that cannot be created on Windows.
       - id: check-json
+        description: Attempts to load all json files to verify syntax.
       - id: check-merge-conflict
+        description: Check for files that contain merge conflict strings.
       - id: check-vcs-permalinks
+        description: Ensures that links to vcs websites are permalinks.
       - id: check-yaml
+        description: Attempts to load all yaml files to verify syntax.
       - id: detect-aws-credentials
+        description: Checks for the existence of AWS secrets that you have set up with the AWS CLI.
         args: [--allow-missing-credentials]
       - id: detect-private-key
+        description: Checks for the existence of private keys.
       - id: end-of-file-fixer
+        description: Makes sure files end in a newline and only a newline.
       - id: fix-byte-order-marker
+        description: Removes UTF-8 byte order marker.
       - id: forbid-submodules
+        description: Forbids any submodules in the repository.
       - id: mixed-line-ending
+        description: Replaces or checks mixed line ending.
       - id: trailing-whitespace
+        description: Trims trailing whitespace.
   - repo: https://github.com/Lucas-C/pre-commit-hooks
     rev: v1.5.5
     hooks:
