feat : Add JSON‑driven background image support (#316)
* Add background JSON support

- Load background map from JSON
- Store user preference
- Update DOMContentLoaded handler

* Refactor background-switcher.js

- Replace hardcoded BG_MAP with empty object
- Convert loadBackgroundMap to async/await
- Simplify DOMContentLoaded listener using async function
- Improve readability and eliminate data duplication

* Update background-switcher.js path and warning

- Use DOCUMENTATION_OPTIONS.URL_ROOT for robust JSON path
- Clarify warning when JSON fails to load

* Fix pre-commit workflow

- Remove duplicate pre-commit execution
- Keep only standard all-files check
- Fix CI failure caused by redundant hook stages

* Revert: Restore manual hook stage test

- Keep both pre-commit execution stages
- Standard hooks and manual hooks both needed
- Rename second step for clarity

* Apply prettier formatting

- Format background-switcher.js
- Format backgrounds.json
- Ensure code style consistency

* refactor: improve separation of concerns in loadBackgroundMap

- loadBackgroundMap now returns data (or null on failure) instead of
  directly modifying the module-level BG_MAP variable
- Added robust data validation in DOMContentLoaded handler to ensure
  the loaded JSON is a valid object before populating BG_MAP
- Addresses code review feedback for better maintainability and testability

* refactor: use Object.prototype.toString for robust type checking

- Replace multi-condition object check with more idiomatic approach
- Object.prototype.toString.call() handles edge cases like typeof null
- Addresses code review feedback for cleaner validation logic

--- a/.github/workflows/pre-commit.yml
+++ b/.github/workflows/pre-commit.yml
@@ -52,5 +52,5 @@ jobs:
 
       - name: 🏃🏻‍♂️‍➡️ Run pre-commit
         run: pre-commit run --color=always --all-files
-      - name: 🏃🏻‍♂️‍➡️ Run pre-commit
+      - name: 🏃🏻‍♂️‍➡️ Run pre-commit (manual hooks)
         run: pre-commit run --color=always --all-files --hook-stage manual
