--- a/.github/workflows/git-clone-matrix.yml
+++ b/.github/workflows/git-clone-matrix.yml
@@ -13,7 +13,7 @@ permissions:
 
 jobs:
   test-git-clone:
-    name: '👨‍🔬 Test git clone on ${{ matrix.os }}'
+    name: "👨‍🔬 Test git clone on ${{ matrix.os }}"
     runs-on: ${{ matrix.os }}
     strategy:
       fail-fast: false
