--- a/.github/workflows/pre-commit.yml
+++ b/.github/workflows/pre-commit.yml
@@ -17,7 +17,7 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-latest, macos-latest]
-        python-version: ['3.13']
+        python-version: ["3.13"]
 
     steps:
       - name: 🍎 Fix macOS gettext issue
@@ -33,7 +33,7 @@ jobs:
         uses: actions/setup-python@v6
         with:
           python-version: ${{ matrix.python-version }}
-          architecture: 'x64'
+          architecture: "x64"
 
       - name: 🪛 Set PY (Python version hash)
         shell: bash
