--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -11,7 +11,7 @@ formats:
 build:
   os: ubuntu-24.04
   tools:
-    python: '3.13'
+    python: "3.13"
   apt_packages:
     - texlive-latex-extra
     - texlive-fonts-recommended
