Fix YAML lint violations

--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -1,6 +1,7 @@
-name: 🛡️ CodeQL Analysis
+---
+name: 'CodeQL Analysis'
 
-on:
+on:  # yamllint disable-line rule:truthy
   push:
     branches: [main]
   pull_request:
