--- a/.github/workflows/git-clone-matrix.yml
+++ b/.github/workflows/git-clone-matrix.yml
@@ -1,6 +1,7 @@
+---
 name: 🧪 Git Clone Matrix Test
 
-on:
+"on":
   push:
     branches:
       - main
@@ -13,7 +14,7 @@ permissions:
 
 jobs:
   test-git-clone:
-    name: "👨‍🔬 Test git clone on ${{ matrix.os }}"
+    name: '👨‍🔬 Test git clone on ${{ matrix.os }}'
     runs-on: ${{ matrix.os }}
     strategy:
       fail-fast: false
@@ -26,5 +27,6 @@ jobs:
 
       - name: Run 🏃 git clone test
         run: |
-          git clone https://github.com/brisbanesocialchess/brisbanesocialchess.github.io.git
+          git clone \
+            https://github.com/brisbanesocialchess/brisbanesocialchess.github.io.git
           echo "Cloned successfully on ${{ matrix.os }}"
