--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -2,6 +2,7 @@
 # See https://docs.readthedocs.io/en/stable/config-file/v2.html for details
 
 # Required
+---
 version: 2
 formats:
   - epub
@@ -11,7 +12,7 @@ formats:
 build:
   os: ubuntu-24.04
   tools:
-    python: "3.13"
+    python: '3.13'
   apt_packages:
     - texlive-latex-extra
     - texlive-fonts-recommended
