--- a/.github/workflows/first-interaction.yml
+++ b/.github/workflows/first-interaction.yml
@@ -1,9 +1,10 @@
+---
 name: 🥇 First Interaction
 
 permissions:
   contents: write
 
-on:
+"on":
   pull_request_target:
     types: [opened, reopened]
   issues:
@@ -16,7 +17,7 @@ jobs:
     steps:
       - uses: actions/first-interaction@v3
         with:
-          repo_token: "${{ secrets.GITHUB_TOKEN }}"
+          repo_token: '${{ secrets.GITHUB_TOKEN }}'
           issue_message: |
             Thanks for opening this issue! We appreciate your contribution.
           pr_message: |
