--- a/.github/workflows/sphinx-docs.yml
+++ b/.github/workflows/sphinx-docs.yml
@@ -1,8 +1,9 @@
-name: ⚒️ Sphinx Docs Build
-
-on:
+---
+name: Sphinx Docs Build
+"on":
   push:
-    branches: [main]
+    branches:
+      - main
   pull_request:
     branches: [main]
 
