--- a/.github/workflows/sphinx-docs.yml
+++ b/.github/workflows/sphinx-docs.yml
@@ -1,6 +1,6 @@
 ---
 name: Sphinx Docs Build
-"on":
+'on':
   push:
     branches:
       - main
@@ -20,7 +20,7 @@ jobs:
       - name: Set up Python
         uses: actions/setup-python@v6
         with:
-          python-version: "3.13"
+          python-version: '3.13'
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
